--- a/vignettes/LDna_basics.Rmd
+++ b/vignettes/LDna_basics.Rmd
@@ -13,7 +13,7 @@ An introduction **LDna**: Basics
 
 Introduction
 ------------
-LDna uses network analyses to find clusters of loci in high linkage disequilibrium (LD) from population genomic data sets (Kemppainen et al., unpublished). In LD networks vertices represent loci and edges represent LD values above given thresholds. Starting from a high LD threshold value, only few loci will be connected to each other. As the LD threshold is lowered, more and more edges and loci are added to the network allowing clusters to 'grow' with respect to numbers of loci and edges. Distinct clusters that remain separate across large range of LD thresholds indicate subsets of loci that represent different population genetic signals in the data. At sufficiently low LD threshold values all loci will eventually merge (connect by at least one edge) into a single cluster. Trees are used to visualise the process of cluster merging with decreasing LD threshold. This is known as a *single linkage clustering* (see `?hclust` for details) as only one connection (edge) between clusters is required for them to be considered as 'merged'. Nodes represent the merged clusters and distance to nodes indicates LD threshold values at which clusters/loci merge.
+This vignette explains the principle of linkage disequilibrium (LD) network analyses (LDna). LDna uses network analyses to find clusters of loci in high linkage disequilibrium from population genomic data sets (Kemppainen et al., unpublished). In LD networks vertices represent loci and edges represent LD values above given thresholds. Starting from a high LD threshold value, only few loci will be connected to each other. As the LD threshold is lowered, more and more edges and loci are added to the network allowing clusters to 'grow' with respect to numbers of loci and edges. Distinct clusters that remain separate across large range of LD thresholds indicate subsets of loci that represent different population genetic signals in the data. At sufficiently low LD threshold values all loci will eventually merge (connect by at least one edge) into a single cluster. Trees are used to visualise the process of cluster merging with decreasing LD threshold. This is known as a *single linkage clustering* (see `?hclust` for details) as only one connection (edge) between clusters is required for them to be considered as 'merged'. Nodes represent the merged clusters and distance to nodes indicates LD threshold values at which clusters/loci merge.
 
 The premise of LDna relies on the notion that 'interesting' clusters remain distinct (i.e. separate) across a wide range of LD thresholds and that these clusters are extracted for downstream analyses at an LD threshold value just before they merge. To identify these mergers we record the change in the median LD between all loci in a cluster before and after merger, $\lambda$. This is defined as: $\big(\widetilde{x}_{1}-\widetilde{x}_{2}\big)n$ where $\widetilde{x}_{1}$ is the median of all pairwise LD values within the focal cluster, $\widetilde{x}_{1}$ is the median of all pairwise values between loci within the focal cluster and between the loci in the focal cluster and any of the loci it merges with, and $n$ is the number of loci in the focal cluster. Thus, the addition of individual loci to an existing cluster or the merging of clusters where only one cluster is large (with respect to numbers of loci) will cause small $\lambda$-values. In contrast, the merging of at least two large and distinct clusters with highly different LD signals will cause high $\lambda$-values for each of the large clusters involved. Clusters with $\lambda$-values that comprise outliers (relative to the median of all values in the data set) are then visually explored and subsequently extracted for downstream analyses.
 
