small update in 'summaryLDna'

--- a/vignettes/LDna_basics.Rmd
+++ b/vignettes/LDna_basics.Rmd
@@ -85,7 +85,7 @@ clusters2
 As seen above, *OC 6_0.48* represents the merging of the two previous *OCs* (*2_0.8* and *5_0.68*). To distinguish that an *OC* contains loci from those extracted at an higher LD threshold than itself we denote it as a *"compound outlier cluster"*, *"COC"*, as opposed to a *"single outlier cluster"*, *"SOC"*. Typically we are mainly interested in *SOCs* and thus by default only *SOCs* are considered. However, as in the example above, when `rm.COCs=FALSE` all *OCs* are shown in the figures (and extracted) and any *COCs* are colored blue.
 
 ### Summerise data
-Based on the data produced above (`ldna`, `clusters` and `LDmat`), *OCs* can be further summarized by the function `summaryLDna`. In addition to the information already available from the `ldna` file above, `summaryLDna` outputs a data frame with the following information for each extracted cluster: *"Type"*, which indicates whether an *OC* is a *SOC* or a *COC* (for the given setting for `min.edges` and `phi`); *"Merge.at"*, which indicates at which LD threshold the cluster merges with the next cluster; *"Median.LD"* which gives the mean of all intra-cluster pairwise LD values and *"MAD.LD"* which gives the scaled median abosulute deviation (see `?mad`) of these LD values. A large difference between the LD threshold at which a cluster first is present (as indicated by the cluster name, see above) and *"Merge.at"* indicates that the cluster remains the same (with respect to it's loci) for a large range of LD threshold values.
+Based on the data produced above (`ldna`, `clusters` and `LDmat`), *OCs* can be further summarized by the function `summaryLDna`. In addition to the information already available from the `ldna` file above, `summaryLDna` outputs a data frame with the following information for each extracted cluster: *"Type"*, which indicates whether an *OC* is a *SOC* or a *COC* (for the given setting for `min.edges` and `phi`); *"Merge.at"*, which indicates at which LD threshold the cluster merges with the next cluster; *"Median.LD"* which gives the median of all intra-cluster pairwise LD values and *"MAD.LD"* which gives the unscaled median abosulute deviation (see `?mad`) of these LD values. A large difference between the LD threshold at which a cluster first is present (as indicated by the cluster name, see above) and *"Merge.at"* indicates that the cluster remains the same (with respect to it's loci) for a large range of LD threshold values.
 ```{r, comment=NA}
 summary <- summaryLDna(ldna, clusters2, LDmat)
 summary
