--- a/vignettes/LDna_advanced.Rmd
+++ b/vignettes/LDna_advanced.Rmd
@@ -81,7 +81,7 @@ par(mfcol=c(1,2))
 clusters_phi2 <- extractClusters(ldna, min.edges = 18, phi = 2, rm.COCs = FALSE, plot.tree = TRUE, plot.graph = TRUE)
 ```
 So which setting should we use for `phi` and which of the *OCs* (*148_0.32* or *90_0.47*) should we focus on? From the summary (below) we can see that the main differences between these two *OCs* are the size (with respect to numbers of loci), median LD and $\lambda$. Thus, with `phi=2` we would identify a *SOC* (*OC 90_0.47*) from the branch in question that is smaller, have higher the median LD and lower $\lambda$ relative to `phi=4` (*OC 148_0.32*).
-```{r, comment=NA}
+```{r, comment=NA, tidy=TRUE}
 summary_phi2 <- summaryLDna(ldna, clusters_phi2[names(clusters_phi2) %in% c("90_0.47","148_0.32")], LDmat)
 summary_phi2
 ```
@@ -104,10 +104,10 @@ clusters2 <- extractClusters(ldna, min.edges=8, phi=2, rm.COCs=TRUE, plot.tree=T
 ```
 Here we focus on additional small clusters; *118_0.38* and *194_0.21* where we have not found any association with the five large inversions in this species. Downstream analyses of *OC 118_0.38* have revealed that this cluster is associated with overall population structure within this species (analyses not shown here). Because of the technique used to obtain this data (RADseq) some loci are likely to be physically close together, either because they are associates with the same restriction site or the SNPs come from the same RAD locus, and this can also cause clusters in LD networks. Indeed, the 11 SNPs from *OC 194_0.21* only represent 7 unique RAD loci (first number before '.' indicates RAD locus) and mapping these loci to the reference genomes reveals that three of these pairs are associated with the same restriction cut-site. This demonstrates that LDna indeed is sensitive to finding even  clusters in population genomic data sets that bear some biological relevance. However, it is important to pay attention to the details of the nature of the data when interpreting the results i.e. in the second example above, the cluster is likely an artifact of the nature of the data rather than a biologically interesting phenomenon.
 
-```{r, fig.width=4, fig.height=4, comment=NA}
+```{r, fig.width=4, fig.height=4, comment=NA, tidy=TRUE}
 clusters2$"194_0.21"
 ```
-```{r, fig.width=8, fig.height=4, comment=NA}
+```{r, fig.width=8, fig.height=4, comment=NA, tidy=TRUE}
 par(mfcol=c(1,2))
 summary2 <- summaryLDna(ldna, clusters=clusters2[names(clusters2) %in% c("118_0.38","194_0.21")], LDmat)
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters2[names(clusters2) %in% c("118_0.38","194_0.21")], summary=summary2)
@@ -119,7 +119,7 @@ par(mfcol=c(1,2))
 clusters_final <- extractClusters(ldna, min.edges = 18, phi=4)
 ```
 ```{r, comment=NA}
-clusters
+clusters_final
 ```
 ```{r, fig.width=8, fig.height=8, comment=NA, fig.show='hold'}
 summary_final <- summaryLDna(ldna, clusters_final, LDmat)
