small updates to documentation

--- a/vignettes/LDna_advanced.Rmd
+++ b/vignettes/LDna_advanced.Rmd
@@ -14,7 +14,7 @@ An introduction **LDna**: Advanced
 
 Introduction
 ------------
-This vignette provides a tutorial that demonstrates the use of LDna on a RAD sequence landscape genomics data set from a Southeast Asian mosquito malaria vector, *Anopheles baimaii*. This species has a widespread distribution extending from Northeast India, through Myanmar and into Thailand. Prior polytene chromosome mapping studies suggests that one polymorphic inversion is found on each of the five chromosome arms (2L, 2R, 3L, 3R and the X-chromosome) in *A. baimaii* and that they constitute up to 43% of their respective chromosomes [1-3]. Intraspecific inversion polymorphism is expected to cause high LD between large sets of loci that are identified by LDna from population genomic data sets. The full RAD sequence data set consists of 3828 SNPs from 184 samples and 91 geographical sites but here we only use a random subset comprising 25% of these loci called `r2.baimaii_subs`. This tutorial assumes you have read and understood the `LDna_basics` tutorial, accessed through: `vignette("LDna_basics", package="LDna")`.
+This vignette provides a tutorial that demonstrates the use of LDna on a RAD sequence landscape genomics data set from a Southeast Asian mosquito malaria vector, *Anopheles baimaii*. This species has a widespread distribution extending from Northeast India, through Myanmar and into Thailand. Prior polytene chromosome mapping studies suggests that one polymorphic inversion is found on each of the five chromosome arms (2L, 2R, 3L, 3R and the X-chromosome) in *A. baimaii* and that they constitute up to 43% of their respective chromosomes [1-3]. Intraspecific inversion polymorphism is expected to result in high LD between large sets of loci that are identified by LDna from population genomic data sets. The full RAD sequence data set consists of 3828 SNPs from 184 samples and 91 geographical sites but here we only use a random subset comprising 25% of these loci called `r2.baimaii_subs`. This tutorial assumes you have read and understood the `LDna_basics` tutorial, accessed through: `vignette("LDna_basics", package="LDna")`.
 
 Linkage disequilibrium network analysis
 ------------
@@ -64,7 +64,7 @@ plotLDnetwork(LDmat=LDmat, option=1, threshold=0.30)
 ```
 
 ### "Single outlier clusters" and "compound outlier clusters"
-Outlier $\lambda$ values imply the merging of large and distinct clusters comprising loci bearing different LD signals (see `LDna_basics`). However, as we can see from the above trees, there is a succession of cluster merging as the LD threshold is lowered. Along this succession only the first merger (moving form right to left along a branch in a tree) involves clusters were both are likely caused by separate distinct evolutionary factors or forces (see also `LDna_basics`). To distinguish that a no other *OCs* are nested within an *OC*, we call this *"single outlier cluster"* (*"SOC"*). When nested *OCs* occur within an *OC*, we denote it as a *"compound outlier cluster"* (*COC*) to indicate that it potentially contains loci bearing LD signals from more than two evolutionary factor or force. Whether this indeed is the case can, however, only be known from downstream analyeses. Normally we are only interested in *SOCs*, but for the purpose of illustration we will next demonstrate a tree where both *SOCs* and *COCs* are indicated. This is achieved by setting the argument `rm.COCs` to `FALSE` in the `extractClusters` function. In this figure blue colour indicates that the cluster in question is a *COC* rather than a *SOC* (red). We set both `min.edges` and `phi` to relatively high values for this data set (18 and 4, respectively), such that we only get a few large *OCs* (this is covered in more detail below).
+Outlier $\lambda$ values imply the merging of large and distinct clusters comprising loci bearing different LD signals (see `LDna_basics`). However, as we can see from the above trees, there is a succession of cluster merging as the LD threshold is lowered. Along this succession only the first merger (moving form right to left along a branch in a tree) involves clusters were both are likely associated with separate distinct evolutionary factors or forces (see also `LDna_basics`). To distinguish that a no other *OCs* are nested within an *OC*, we call this *"single outlier cluster"* (*"SOC"*). When nested *OCs* occur within an *OC*, we denote it as a *"compound outlier cluster"* (*COC*) to indicate that it potentially contains loci bearing LD signals from more than two evolutionary factor or force. Whether this indeed is the case can, however, only be known from downstream analyeses. Normally we are only interested in *SOCs*, but for the purpose of illustration we will next demonstrate a tree where both *SOCs* and *COCs* are indicated. This is achieved by setting the argument `rm.COCs` to `FALSE` in the `extractClusters` function. In this figure blue colour indicates that the cluster in question is a *COC* rather than a *SOC* (red). We set both `min.edges` and `phi` to relatively high values for this data set (18 and 4, respectively), such that we only get a few large *OCs* (this is covered in more detail below).
 ```{r fig.width=10, fig.height=5, tidy=TRUE}
 par(mfcol=c(1,2))
 clusters1 <- extractClusters(ldna, min.edges = 18, phi = 4, rm.COCs = FALSE, plot.tree = TRUE, plot.graph = FALSE)
@@ -110,7 +110,7 @@ plotLDnetwork(ldna, LDmat, option=2, clusters=clusters_phi2[names(clusters_phi2)
 Based on our experience, we consider $\varphi$-values: 2-3 to be low, 3-5 to be medium and 5-8 to be high. As outlier $\lambda$ values are relative to the median of all values in the tree this is likely to be true for any data set. Going below 2 and above 8 makes little sense except for the purpose of demonstration. In practice, for smaller data sets, the merging of 'biologically relevant clusters' may not cause exceptionally high $\lambda$-values (even relative to all other values in the data) and thus, in order to not miss such mergers, it makes sense to keep $\varphi$ relatively low for small data sets. With relatively low $\varphi$ values you will always get at least one *SOC* from each ‘large branch’ in a tree. The risk with a 'too' low $\varphi$ is that you may not be able to extract the maximum possible number of loci that are associated with a particular evolutionary factor/force. On the other hand, these loci will be in higher LD with each other and are thus more likely to be more closely associate with the evolutionary force/factor in question. If $\varphi$ is set 'too' high there is a risk that a 'significant' merger will be missed leading to the identification of an *OC* that contains loci bearing LD signals from more than one distinct evolutionary factor/forces (i.e. it is in reality a *COC* not a *SOC*). However, downstream analysis can usually spot this.
 
 ### Identifying and extracting clusters, the effects of $|E|_{min}$
-In contrast to $\varphi$, what constitutes a low and a high value for $|E|_{min}$ is highly dependent on the number of loci in the data set, more specifically the resulting average SNP density in the genome. The more loci the more likely are SNPs to come from small blocks of non-recombining regions of the genome, so-called haplotype blocks. These are expected to result in many small but highly 'compact' clusters involving loci from very small genomic regions. However, generally LD breaks down rapidly in large outbreeding populations [4] and typical population genomics data set rarely reach such SNP densities. As a rough guideline, a good starting value for $|E|_{min}$ is 1-10% of the total number of SNPs in the data set. In practice, if the LD signals in the data are robust, a large span of different $|E|_{min}$ values will result in exactly the same *OCs*. Although small *OCs* may potentially also be important/interesting, $|E|_{min}$ is mainly a matter of convenience; you don’t want to do all the downstream analyses for hundreds of *SOCs* (and the biggest ones are likely to be the most interesting). In the following example `min.edges` is deliberately set at a relatively low value (8).
+In contrast to $\varphi$, what constitutes a low and a high value for $|E|_{min}$ is highly dependent on the number of loci in the data set, more specifically the resulting average SNP density in the genome. The more loci the more likely are SNPs to come from small blocks of non-recombining regions of the genome, so-called haplotype blocks. These are expected to result in many small but highly 'compact' clusters involving loci from very small genomic regions. However, generally LD breaks down rapidly as a function of physical/recombinatin distance in large outbreeding populations [4] and typical population genomics data set rarely reach such SNP densities. As a rough guideline, a good starting value for $|E|_{min}$ is 1-10% of the total number of SNPs in the data set. In practice, if the LD signals in the data are robust, a large span of different $|E|_{min}$ values will result in exactly the same *OCs*. Although small *OCs* may potentially also be important/interesting, $|E|_{min}$ is mainly a matter of convenience; you don’t want to do all the downstream analyses for hundreds of *SOCs* (and the biggest ones are likely to be the most interesting). In the following example `min.edges` is deliberately set at a relatively low value (8).
 ```{r, fig.width=4, fig.height=4, comment=NA, tidy=TRUE}
 clusters2 <- extractClusters(ldna, min.edges=8, phi=2, rm.COCs=TRUE, plot.tree=TRUE, plot.graph=FALSE)
 ```
