--- a/vignettes/LDna_basics.Rmd
+++ b/vignettes/LDna_basics.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 <!--
 %\VignetteEngine{knitr}
 %\VignetteIndexEntry{An introduction LDna: Basics}
@@ -9,7 +14,7 @@ library(knitr)
   
 An introduction **LDna**: Basics
 =======================================
-#### Petri kemppainen, October 7, 2014
+#### Petri Kemppainen, April, 2018
 
 Introduction
 ------------
@@ -77,11 +82,14 @@ par(mfcol=c(1,2))
 clusters1 <- extractClusters(ldna, min.edges = 0, phi = 1)
 ```
 
-`extractClusters` outputs a list with all OCs and their loci.
+`extractClusters` outputs a list with all OCs and their loci. New (from v.63) is that function `extractClusters` exports a list with two objects of which the first one contains the clusters and the second contains a matrix indicating which *"SOCs"* are nested in which *"COCs"*.
 ```{r, comment=NA}
 clusters1[[1]]
 ```
-
+In this case there is only on cluster that by definition is a *"SOC"*.
+```{r, comment=NA}
+clusters1[[2]]
+```
 If `phi` is lowered to 0.25 one additional cluster, *6_0.48*, becomes an outlier.
 ```{r fig.width=10, fig.height=5}
 par(mfcol=c(1,2))
@@ -92,6 +100,11 @@ clusters2[[1]]
 ```
 
 As seen above, *OC 6_0.48* represents the merging of the two previous *OCs* (*2_0.8* and *5_0.68*). To distinguish that an *OC* contains loci from those extracted at an higher LD threshold than itself we denote it as a *"compound outlier cluster"*, *"COC"*, as opposed to a *"single outlier cluster"*, *"SOC"*. Typically we are mainly interested in *SOCs* and thus by default only *SOCs* are considered. However, as in the example above, when `rm.COCs=FALSE` all *OCs* are shown in the figures (and extracted) and any *COCs* are colored blue.
+
+In this case all second object are *"SOCs"*.
+```{r, comment=NA}
+clusters2[[2]]
+```
 
 ### Summerise data
 Based on the data produced above (`ldna`, `clusters` and `LDmat`), *OCs* can be further summarized by the function `summaryLDna`. In addition to the information already available from the `ldna` file above, `summaryLDna` outputs a data frame with the following information for each extracted cluster: *"Type"*, which indicates whether an *OC* is a *SOC* or a *COC* (for the given setting for `min.edges` and `phi`); *"Merge.at"*, which indicates at which LD threshold the cluster merges with the next cluster; *"Median.LD"* which gives the median of all intra-cluster pairwise LD values and *"MAD.LD"* which gives the unscaled median abosulute deviation (see `?mad`) of these LD values. A large difference between the LD threshold at which a cluster first is present (as indicated by the cluster name, see above) and *"Merge.at"* indicates that the cluster remains the same (with respect to it's loci) for a large range of LD threshold values.
